Modernize build config: remove Travis CI, update Maven plugins and JUnit, fix deprecated API calls